/assets/img/ru.svg

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 				</div>
 				<section class="documents">
 					<div class="/assets/document-item">
-						<img src="img/ru.png" alt="Russia License" />
+						<img src="/assets/img/ru.png" alt="Russia License" />
 						<h3>Свидетельство о регистрации в РФ</h3>
 					</div>
 					<div class="document-item">
