--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 	<body>
 		<header>
 			<section class="fup">
-				<div class="logo">
-					<img src="/assets/img/logo.svg" alt="FromBoard Delivery Logo" />
-				</div>
+				<a href="/">
+					<div class="logo">
+						<img src="/assets/img/logo.svg" alt="FromBoard Delivery Logo" />
+					</div>
+				</a>
 				<div class="rightfup">
 					<div class="info">
 						<p>Доставляем товары из заграницы в Россию</p>
