--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
 		<link rel="stylesheet" href="./assets/css/styles.css" />
 		<link rel="stylesheet" href="./assets/css/media.css" />
-		<link rel="stylesheet" href="./assets/css/basic.css">
+		<link rel="stylesheet" href="./assets/css/basic.css" />
 		<link rel="stylesheet" href="./assets/css/default.css" />
-		<link rel="preload" href="./assets/fonts/Inter-Regular.woff2" as="font" type="font/woff2" crossorigin="">
+		<link
+			rel="preload"
+			href="./assets/fonts/Inter-Regular.woff2"
+			as="font"
+			type="font/woff2"
+			crossorigin=""
+		/>
 		<link rel="icon" href="./assets/img/icon.svg" />
 		<script src="./assets/js/exchange.js" defer></script>
 		<title>FromBoard Delivery - ваша доставка из заграницы</title>
@@ -35,7 +41,9 @@
 				</section>
 				<section class="nav__container">
 					<nav class="nav__list">
-						<a href="#Калькулятор" class="nav__button active__button">Калькулятор</a>
+						<a href="#Калькулятор" class="nav__button active__button"
+							>Калькулятор</a
+						>
 						<a href="#О-нас" class="nav__button">О нас</a>
 						<a href="#Гарантии" class="nav__button">Гарантии</a>
 						<a href="#Отзывы" class="nav__button">Отзывы</a>
@@ -59,9 +67,11 @@
 					<img src="./assets/img/office.png" alt="Office Photo" />
 				</div>
 				<div class="calculator__container">
-					<div class="calculatore__text">
+					<div class="calculator__text">
 						<p>Калькулятор доставки</p>
-						<p>Посчитайте, сколько будет стоить перевозка покупки из зарубежа</p>
+						<p>
+							Посчитайте, сколько будет стоить перевозка покупки из зарубежа
+						</p>
 					</div>
 					<div class="form__container">
 						<div class="form__item form__item--wide">
