default.css update

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 							</div>
 						</div>
 					</div>
-					<button id="nextBtn">
+					<button id="nextButton">
 						<img src="./assets/img/right.svg" alt="right" />
 					</button>
 				</div>
